# learn

./: README.md  minigrep.rs
dsasync/: .gitignore  Cargo.toml
dsasync/src/: async-stock-signal.rs  main.rs  messages.rs  server.rs
dsasync/src/actors/: data_buffering.rs  data_printing.rs  data_procesing.rs  data_streaming.rs  data_writing.rs  mod.rs
first-api-with-rust/: Cargo.toml  README.md
first-api-with-rust/src/: main.rs
level-up-rust/: Cargo.toml
level-up-rust-16/: Cargo.toml
level-up-rust-16/src/: main.rs
level-up-rust/src/: main.rs
minigrep/src/: lib.rs  main.rs
orchestrator/: README.md
orchestrator/orchestrator-go/: README.md  go.mod  go.sum  main.go
orchestrator/orchestrator-go/manager/: manager.go
orchestrator/orchestrator-go/task/: task.go
orchestrator/orchestrator-go/worker/: handlers.go  worker.go
orchestrator/orchestrator-rs/: Cargo.toml  README.md
orchestrator/orchestrator-rs/src/: node.rs  task.rs  worker.rs
orchestrator/orchestrator-ts/: README.md  node.ts  task.ts
progts/: README.md
rust-book-server/: Cargo.toml  README.md
rust-book-server/src/: lib.rs  main.rs
rust-servers-services-and-apps/: Cargo.toml
rust-servers-services-and-apps/tutor-db/: .env  Cargo.toml
rust-servers-services-and-apps/tutor-db/src/: errors.rs  routes.rs
rust-servers-services-and-apps/tutor-db/src/dbaccess/: course.rs
rust-servers-services-and-apps/tutor-db/src/dbscripts/: course.sql
rust-servers-services-and-apps/tutor-db/src/handlers/: course.rs
rust-servers-services-and-apps/tutor-db/src/models/: course.rs
rust-servers-services-and-apps/tutor-nodb/: Cargo.toml
rust-servers-services-and-apps/tutor-nodb/src/: handlers.rs  models.rs
rust-web-dev/: .gitignore  Cargo.toml  Dockerfile  README.md  questions.json
rust-web-dev/handle-errors/: Cargo.toml
rust-web-dev/handle-errors/src/: lib.rs
rust-web-dev/migrations/: 20221227074757_extend_questions_table.down.sql  20221227074757_extend_questions_table.up.sql  20221227074822_extend_answers_table.down.sql  20221227074822_extend_answers_table.up.sql
rust-web-dev/src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
rust-web-dev/src/routes/: authentication.rs  question.rs
rust-web-dev/src/types/: pagination.rs  question.rs
