[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
log = "0.4.17"
yahoo_finance_api = "1.1"
futures = "0.3.21"
# CVE-2022-24713
regex = "1.5.5"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes", "unstable"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "3.1.8"
features = ["derive"]
