[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>", "Pedro Palazon-Candel <kusorbox@gmail.com>"]
edition = "2021"
name = "manning-lp-async-rust-project-2-m2"
version = "0.4.0"
default-run = "actors-service"

[[bin]]
name = "http-service"

[[bin]]
name = "actors-service"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
log = "0.4.17"
yahoo_finance_api = "1.1"
futures = "0.3.21"
# CVE-2022-24713
regex = "1.5.5"
xactor = "0.7.11"

[dependencies.tide]
version = "0.16.0"

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.async-std]
version = "1.12.0"
features = ["attributes", "unstable"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "3.1.8"
features = ["derive"]
