[package]
name = "rust-web-dev"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3.0"
 # We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
mock-server = { path = "mock-server", version = " 0.1.0" }
# Tracing and logging:
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# DB
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
# reqwest
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
# encryption
rand = "0.8"
rust-argon2 = "1.0"
# Tokens
paseto = "2.0"
chrono = "0.4.19"
# Config files
dotenv = "0.15.0"
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
openssl = { version = "0.10.32", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"
