[package]
name = "orchestrator-rs"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Palazon-Candel <kusorbox@gmail.com>"]
default-run = "orchestrator"

[[bin]]
name = "orchestrator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
bollard = "0.13"
tokio = { version = "1.23.0", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3.25"
